--- a/tasks/misp-modules.yml
+++ b/tasks/misp-modules.yml
@@ -16,7 +16,7 @@
     owner: "{{ www_user }}"
     mode: '0755'
     recurse: yes
-  when: ansible_os_family == 'RedHat'
+  when: ansible_facts['os_family'] == 'RedHat'
 
 - name: Install MISP modules (pip3)
   ansible.builtin.pip:
