--- a/tasks/mysql-configure-login.yml
+++ b/tasks/mysql-configure-login.yml
@@ -40,7 +40,7 @@
     replace: "ENGINE=MyISAM"
     mode: '0644'
     backup: yes
-  when: ansible_distribution_major_version == '7'
+  when: ansible_facts['distribution_major_version'] == '7'
 
 - name: Importing mysql misp db template
   community.mysql.mysql_db:
