--- a/tasks/redhat-remi.yml
+++ b/tasks/redhat-remi.yml
@@ -6,7 +6,7 @@
 
 - name: Show packages
   ansible.builtin.debug:
-    var: ansible_facts.packages
+    var: ansible_facts['facts.packages']
     verbosity: 3
 
 - name: Import Remi rpm repository keys
@@ -21,7 +21,7 @@
 
 - name: RedHat | Install Remi repo
   ansible.builtin.dnf:
-    name: "http://rpms.remirepo.net/enterprise/remi-release-{{ ansible_distribution_major_version }}.rpm"
+    name: "http://rpms.remirepo.net/enterprise/remi-release-{{ ansible_facts['distribution_major_version'] }}.rpm"
     state: present
   when: "'remi-release' not in ansible_facts.packages"
   register: pkg_result
@@ -31,7 +31,7 @@
   ansible.builtin.command: "grep '^enabled=' /etc/yum.repos.d/remi-php{{ php_remi_version }}.repo"
   register: remistate
   changed_when: false
-  when: ansible_distribution_major_version | int < 8
+  when: ansible_facts['distribution_major_version'] | int < 8
 
 # https://github.com/ansible/ansible-modules-extras/issues/2384
 - name: RedHat | Enable remi repository for php
@@ -41,7 +41,7 @@
   #   name: remi-php56
   #   enable: yes
   when:
-    - ansible_distribution_major_version | int < 8
+    - ansible_facts['distribution_major_version'] | int < 8
     - remistate.stdout is defined
     - not ('enabled=1' in remistate.stdout)
 
@@ -49,13 +49,13 @@
   ansible.builtin.command:  # noqa no-changed-when
     cmd: "dnf module reset php -y"
   when:
-    - ansible_distribution_major_version | int >= 8
-    - ansible_facts.packages['php-fpm'] is defined
-    - ansible_facts.packages['php-fpm'][0]['version'] is version_compare('7.4', '<')
+    - ansible_facts['distribution_major_version'] | int >= 8
+    - ansible_facts['facts.packages['php-fpm']'] is defined
+    - ansible_facts['facts.packages['php-fpm'][0]['version']'] is version_compare('7.4', '<')
 - name: RedHat | enable remi repository for php
   ansible.builtin.command:  # noqa no-changed-when
     cmd: "dnf module enable php:remi-{{ php_remi_version_long }} -y"
-  when: ansible_distribution_major_version | int >= 8
+  when: ansible_facts['distribution_major_version'] | int >= 8
   register: remirepo
   changed_when:
     - remirepo.rc != 0
