fix: INJECT_FACTS_AS_VARS - porting ansible 13 (2)

--- a/tasks/php-conflict.yml
+++ b/tasks/php-conflict.yml
@@ -7,7 +7,7 @@
 - name: List installed php packages
   ansible.builtin.debug:
     msg: "{{ item }}"
-  loop: "{{ ansible_facts['facts.packages'] | select('match', '^php-*') | list }}"
+  loop: "{{ ansible_facts.packages | select('match', '^php-*') | list }}"
 
 - name: Check debian alternatives
   ansible.builtin.command:
