ci(default): target hosts as variable, default all in verify.yml

--- a/molecule/default/verify.yml
+++ b/molecule/default/verify.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Verify MISP setup
-  hosts: mispgroup
+  hosts: "{{ playbook_hosts | default('all') }}"
   gather_facts: true
   vars:
     misp_home: /var/www/_MISP
